--- a/static/index.html
+++ b/static/index.html
@@ -20,12 +20,12 @@
   <div class="toolbar">
     <span id="authBadge" class="pill">Guest</span>
     <div class="spacer"></div>
-    <button id="btnAccount" class="btn">Account</button>
-    <button id="btnHealth" class="btn">Health</button>
-    <button id="btnSeed" class="btn">Seed Demo</button>
-    <button id="btnPull" class="btn">Pull Demo Posts</button>
-    <button id="btnPlan" class="btn primary">7-Day Plan</button>
-    <button id="btnLogout" class="btn danger">Logout</button>
+    <button id="btnAccount" onclick="openAuth()">Account/button>
+    <button id="btnHealth" onclick="refreshHealth()">Health/button>
+    <button id="btnSeed" onclick="seedDemo()">Seed Demo/button>
+    <button id="btnPull" onclick="pullPosts()">Pull Demo Posts/button>
+    <button id="btnPlan" onclick="generatePlaybook()">7-Day Plan/button>
+    <button id="btnLogout" onclick="logout()">Logout/button>
   </div>
 
   <div class="grid">
@@ -38,10 +38,10 @@
     <h3>Connections</h3>
     <div id="connections" class="row" style="margin-bottom:8px"></div>
     <div class="row" style="gap:8px;flex-wrap:wrap">
-      <button id="btnIG" class="btn">Connect Instagram</button>
-      <button id="btnTT" class="btn">Connect TikTok</button>
-      <button id="btnFB" class="btn">Connect Facebook</button>
-      <button id="btnYT" class="btn">Connect YouTube</button>
+      <button id="btnIG" onclick="connect('instagram')">Connect Instagram/button>
+      <button id="btnTT" onclick="connect('tiktok')">Connect TikTok/button>
+      <button id="btnFB" onclick="connect('facebook')">Connect Facebook/button>
+      <button id="btnYT" onclick="connect('youtube')">Connect YouTube/button>
     </div>
   </div>
 
@@ -49,7 +49,7 @@
     <h3>AI Assistant</h3>
     <div class="ai">
       <input id="aiq" placeholder="Ask about posts, competitors, or what to test next…">
-      <button id="btnAskAI" class="btn primary">Ask</button>
+      <button id="btnAskAI" onclick="askAI()">Ask/button>
     </div>
     <pre id="aiout">—</pre>
   </div>
@@ -59,8 +59,8 @@
       <h3>Recommendations</h3>
       <div class="row">
         <span class="sub">Select to include in plan</span>
-        <button id="btnClearSel" class="btn">Clear</button>
-        <button id="btnPlan2" class="btn primary">Build Plan</button>
+        <button id="btnClearSel" onclick="clearSelection()">Clear/button>
+        <button id="btnPlan2" onclick="generatePlaybook()">Build Plan/button>
       </div>
     </div>
     <div id="recs"></div>
@@ -82,7 +82,7 @@
     </div>
     <textarea id="c_msg" placeholder="How can we help?"></textarea>
     <div class="row" style="gap:8px">
-      <button id="btnContact" class="btn">Submit</button>
+      <button id="btnContact" onclick="submitContact()">Submit/button>
       <a class="btn primary" href="mailto:sawmoore80@gmail.com?subject=Free%20Quote&body=Hi%20AdMind%2C%20I%27d%20like%20a%20free%20quote.">Book Free Quote</a>
     </div>
   </div>
@@ -92,7 +92,7 @@
   <!-- Account Modal -->
   <div id="authModal" class="modal-backdrop" style="display:none">
     <div class="modal">
-      <div class="head"><h3>Account</h3><button id="btnCloseAuth" class="close">Close</button></div>
+      <div class="head"><h3>Account</h3><button id="btnCloseAuth" onclick="closeAuth()">Close/button></div>
       <p class="muted">Create an account or sign in to save connections and see your private data.</p>
       <div class="row" style="gap:8px;flex-wrap:wrap">
         <input id="email" placeholder="Email">
@@ -107,7 +107,7 @@
   <!-- Plan Modal -->
   <div id="modal" class="modal-backdrop" style="display:none">
     <div class="modal">
-      <div class="head"><h3>7-Day Playbook</h3><button id="btnClosePlan" class="close">Close</button></div>
+      <div class="head"><h3>7-Day Playbook</h3><button id="btnClosePlan" onclick="hideModal()">Close/button></div>
       <table class="table"><thead><tr><th>Day</th><th>Title</th><th>KPI</th><th>Severity</th><th>What to ship</th><th>How to measure</th></tr></thead><tbody id="planRows"></tbody></table>
     </div>
   </div>
@@ -115,6 +115,6 @@
   <div id="toast" class="toast"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js" crossorigin="anonymous"></script>
-  <script src="/static/app.js?v=20002"></script>
+  <script src="/static/app.js?v=1760557385"></script>
 </body>
 </html>
