Enable real auth endpoints and working front-end handlers

--- a/static/index.html
+++ b/static/index.html
@@ -93,6 +93,6 @@
   <div id="toast" class="toast"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js" crossorigin="anonymous"></script>
-  <script src="/static/app.js?v=10001"></script>
+  <script src="/static/app.js?v=1760560721"></script>
 </body>
 </html>
