Working backend endpoints and wired onclicks

--- a/static/index.html
+++ b/static/index.html
@@ -17,13 +17,13 @@
 
   <div class="toolbar">
     <span id="authBadge" class="pill">Guest</span>
-    <button id="btnAccount" class="btn" onclick="openAuth()">Account</button>
-    <button id="btnHealth" class="btn" onclick="refreshHealth()">Health</button>
+    <button id="btnAccount" onclick="openAuth()"Account</button>
+    <button id="btnHealth" onclick="refreshHealth()"Health</button>
     <button id="btnSeed" class="btn" onclick="seedDemo()">Seed Demo</button>
     <button id="btnPull" class="btn" onclick="pullPosts()">Pull Demo Posts</button>
     <button id="btnPlan" class="btn primary" onclick="generatePlaybook()">7-Day Plan</button>
     <div class="spacer"></div>
-    <button id="btnLogout" class="btn danger" onclick="logout()">Logout</button>
+    <button id="btnLogout" onclick="logout()"Logout</button>
   </div>
 
   <div class="grid">
@@ -93,6 +93,6 @@
   <div id="toast" class="toast"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js" crossorigin="anonymous"></script>
-  <script src="/static/app.js?v=1760560721"></script>
+  <script src="/static/app.js?v=1760561731"></script>
 </body>
 </html>
