OAuth flows (start+callback), AI assistant, icon buttons, polished insights

--- a/static/index.html
+++ b/static/index.html
@@ -3,43 +3,55 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>AdMind – Premium Optimization</title>
+  <title>AdMind</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/static/app.css">
 </head>
 <body>
   <div class="hero">
-    <img src="/static/art.svg" class="art" alt="decor"/>
     <div class="overlay">
       <div class="logo">AdMind</div>
       <div class="tag">Premium optimization workspace</div>
     </div>
+    <img class="art" src="/static/art.svg" alt="">
   </div>
 
   <div class="toolbar">
     <span id="authBadge" class="pill">Guest</span>
-    <button id="btnAccount" onclick="openAuth()"Account</button>
-    <button id="btnHealth" onclick="refreshHealth()"Health</button>
-    <button id="btnSeed" class="btn" onclick="seedDemo()">Seed Demo</button>
-    <button id="btnPull" class="btn" onclick="pullPosts()">Pull Demo Posts</button>
-    <button id="btnPlan" class="btn primary" onclick="generatePlaybook()">7-Day Plan</button>
     <div class="spacer"></div>
-    <button id="btnLogout" onclick="logout()"Logout</button>
+    <button id="btnHealth" class="btn pill">Health</button>
+    <button id="btnSeed" class="btn pill">Seed Demo</button>
+    <button id="btnPull" class="btn pill">Pull Demo Posts</button>
+    <button id="btnPlan" class="btn primary">7-Day Plan</button>
+    <button id="btnAccount" class="btn pill">Account</button>
+    <button id="btnLogout" class="btn pill">Logout</button>
   </div>
 
   <div class="grid">
-    <div class="card"><h3>KPIs</h3><div id="kpis" class="kpis"></div></div>
-    <div class="card"><h3>Spend & ROAS Trend</h3><div style="height:220px"><canvas id="trendChart"></canvas></div></div>
-    <div class="card"><h3>Top Click Drivers</h3><div style="height:220px"><canvas id="topChart"></canvas></div></div>
+    <div class="card">
+      <h3>KPIs</h3>
+      <div id="kpis" class="kpis"></div>
+    </div>
+    <div class="card">
+      <h3>Spend & ROAS Trend</h3>
+      <canvas id="trendChart" height="160"></canvas>
+    </div>
+    <div class="card">
+      <h3>Top Click Drivers</h3>
+      <canvas id="topChart" height="160"></canvas>
+    </div>
   </div>
 
   <div class="card">
     <h3>Connections</h3>
-    <div id="connections" class="row" style="margin:8px 0 12px"></div>
-    <div class="row" style="gap:8px;flex-wrap:wrap">
-      <button id="btnIG" class="btn" onclick="connect('instagram')">Connect Instagram</button>
-      <button id="btnTT" class="btn" onclick="connect('tiktok')">Connect TikTok</button>
-      <button id="btnFB" class="btn" onclick="connect('facebook')">Connect Facebook</button>
-      <button id="btnYT" class="btn" onclick="connect('youtube')">Connect YouTube</button>
+    <div id="connections" class="row" style="gap:10px;flex-wrap:wrap;margin-top:10px">
+      <button id="btnIG" class="soc"><img src="/static/icons/instagram.svg"><span>Instagram</span></button>
+      <button id="btnTT" class="soc"><img src="/static/icons/tiktok.svg"><span>TikTok</span></button>
+      <button id="btnFB" class="soc"><img src="/static/icons/facebook.svg"><span>Facebook</span></button>
+      <button id="btnYT" class="soc"><img src="/static/icons/youtube.svg"><span>YouTube</span></button>
+      <button id="btnLI" class="soc"><img src="/static/icons/linkedin.svg"><span>LinkedIn</span></button>
     </div>
   </div>
 
@@ -47,7 +59,7 @@
     <h3>AI Assistant</h3>
     <div class="row">
       <input id="aiq" placeholder="Ask about posts, competitors, or what to test next…" style="flex:1">
-      <button id="btnAskAI" class="btn primary" onclick="askAI()">Ask</button>
+      <button id="btnAskAI" class="btn primary">Ask</button>
     </div>
     <pre id="aiout">—</pre>
   </div>
@@ -57,35 +69,40 @@
       <h3>Recommendations</h3>
       <div class="row">
         <span class="sub">Select to include in plan</span>
-        <button id="btnClearSel" class="btn" onclick="clearSelection()">Clear</button>
-        <button id="btnPlan2" class="btn primary" onclick="generatePlaybook()">Build Plan</button>
+        <button id="btnClearSel" class="btn">Clear</button>
+        <button id="btnPlan2" class="btn primary">Build Plan</button>
       </div>
     </div>
-    <div id="recs"></div>
+    <div id="recs" class="rec-list"></div>
   </div>
 
-  <div class="card"><h3>Posts</h3><div id="posts"></div></div>
-  <div class="card"><h3>API Output</h3><pre id="out">—</pre></div>
+  <div class="card">
+    <h3>Posts</h3>
+    <div id="posts"></div>
+  </div>
 
-  <!-- Account Modal -->
+  <div class="card">
+    <h3>API Output</h3>
+    <pre id="out">—</pre>
+  </div>
+
   <div id="authModal" class="modal-backdrop" style="display:none">
     <div class="modal">
-      <div class="head"><h3>Account</h3><button id="btnCloseAuth" class="close" onclick="closeAuth()">Close</button></div>
+      <div class="head"><h3>Account</h3><button id="btnCloseAuth" class="close">Close</button></div>
       <p class="muted">Create an account or sign in to save connections and see your private data.</p>
       <div class="row" style="gap:8px;flex-wrap:wrap">
         <input id="email" placeholder="Email">
         <input id="password" type="password" placeholder="Password">
-        <button id="btnDoRegister" class="btn" onclick="register()">Create account</button>
-        <button id="btnDoLogin" class="btn primary" onclick="login()">Sign in</button>
+        <button id="btnDoRegister" class="btn">Create account</button>
+        <button id="btnDoLogin" class="btn primary">Sign in</button>
       </div>
       <div style="margin-top:10px"><small class="muted">Connected as: <span id="whoami">guest</span></small></div>
     </div>
   </div>
 
-  <!-- Plan Modal -->
   <div id="modal" class="modal-backdrop" style="display:none">
     <div class="modal">
-      <div class="head"><h3>7-Day Playbook</h3><button id="btnClosePlan" class="close" onclick="hideModal()">Close</button></div>
+      <div class="head"><h3>7-Day Playbook</h3><button id="btnClosePlan" class="close">Close</button></div>
       <table class="table"><thead><tr><th>Day</th><th>Title</th><th>KPI</th><th>Severity</th><th>What to ship</th><th>How to measure</th></tr></thead><tbody id="planRows"></tbody></table>
     </div>
   </div>
@@ -93,6 +110,6 @@
   <div id="toast" class="toast"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js" crossorigin="anonymous"></script>
-  <script src="/static/app.js?v=1760561731"></script>
+  <script src="/static/app.js?v=1760633291"></script>
 </body>
 </html>
